tests/paczka1/fuzzy1/70141094.err
Error in line 1: xceTmEk S954 6,7
Error in line 25: IjT A96 67,3
Error in line 34: IjT S954 51,3
